--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li>conflict</li>
 			<li>Solving problem</li>
 			<li>remote repository</li>
+			<li>encoding setting</li>
 		</ul>	
 	</body>
 </html>
