--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li>Solving problem</li>
 			<li>remote repository</li>
 			<li>encoding setting</li>
+			<li>encoding setting2</li>
 		</ul>	
 	</body>
 </html>
