--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<li>Solving problem</li>
 			<li>remote repository</li>
 			<li>encoding setting</li>
-			<li>encoding setting2</li>
+			<li>push</li>
+			<li>pull</li>
 		</ul>	
 	</body>
 </html>
