--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<ul>
 			<li>sync.kim</li>
 			<li>repository</li>
-			<li>version</li>
+			<li>git version</li>
 			<li>llllllll</li>
 			<li>iiiiiii</li>
 			<li>hahaha</li>
