--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li>pull.lee</li>
 			<li>conflict.lee.kim</li>
 			<li>External tools</li>
-			<li>stash</li>
+			<li>stash1</li>
 		</ul>	
 	</body>
 </html>
